# computer-vision-with-YOLO

./: .gitignore  README.md  dump_project.py  main.py  pyproject.toml  repo_tree.txt  tree.py
docs/: error_analysis.md  governance_checklist.md  mini_report.md  model_governance_framework.md  sam_exploration.md
notebooks/: MAICEN1125_M4U3_computer_vision_version2_audited.ipynb
